Fixed layout issues with 'today' events

--- a/css/snacktack.css
+++ b/css/snacktack.css
@@ -217,7 +217,7 @@ div#cancel:hover {
  * Table CSS (Awards, Events)
  */
 
-div.award table, a.today table {
+table {
 	empty-cells: hide;
 	border-collapse: collapse;
 }
@@ -226,11 +226,11 @@ div.award div.name {
 	padding: 0 10px;
 }
 
-a.today div.name {
+table div.name {
 	padding: 0;
 }
 
-div.award div.name, a.today div.name {
+div.award div.name, table div.name {
 	font-weight: bold;
 }
 
@@ -238,11 +238,11 @@ div.award div.description {
 	padding: 0 10px;
 }
 
-a.today div.description {
+table div.description {
 	padding: 0;
 }
 
-div.award div.description, a.today div.description {
+div.award div.description, table div.description {
 	font-size: .8em;
 }
 
